--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,18 @@ version: '3.1'
 services:
   proxy:
     image: nginx:alpine
-    ports: 
-      - 5001:80
+    expose: 
+      - 80
+      - 443
     volumes: 
-      - wordpress:/var/www/html
-      - ./nginx:/etc/nginx/conf.d
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - wordpress:/var/www/html/wpapi
     links: 
       - wordpress
+    networks: 
+      wpapi_network:
+        ipv4_address: 172.28.0.250
 
   wordpress:
     image: wordpress:php7.2-fpm-alpine
@@ -20,11 +25,14 @@ services:
       WORDPRESS_DB_NAME: shopdb
     volumes:
       - wordpress:/var/www/html
+    networks: 
+      wpapi_network:
+        ipv4_address: 172.28.0.251
 
   db:
     image: mysql:5.7
-    ports: 
-      - 3308:3306
+    expose: 
+      - 3306
     environment:
       MYSQL_DATABASE: shopdb
       MYSQL_USER: wpuser
@@ -32,7 +40,17 @@ services:
       MYSQL_ROOT_PASSWORD: dev
     volumes:
       - db:/var/lib/mysql
+    networks: 
+      wpapi_network:
+        ipv4_address: 172.28.0.252
 
 volumes:
   wordpress:
   db:
+
+networks:
+  wpapi_network:
+    ipam:
+      driver: default
+      config: 
+        - subnet: 172.28.0.0/16
