--- a/nginx/conf.d/wpapi.local.conf
+++ b/nginx/conf.d/wpapi.local.conf
@@ -1,17 +1,29 @@
+upstream wpapi.local {
+    server 172.28.0.254;
+}
+
 server {
     listen 80;
+    listen [::]:80;
+    # listen 443 ssl http2;
+    # listen [::]:443 ssl http2;
+
     server_name wpapi.local;
- 
-    root /var/www/html;
+
+    # ssl_certificate /etc/ssl/certs/localhost.crt;
+    # ssl_certificate_key /etc/ssl/private/localhost.key;
+
+    # ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+
+    root /var/www/html/wpapi;
     index index.php;
- 
-    access_log /var/log/nginx/hakase-access.log;
-    error_log /var/log/nginx/hakase-error.log;
- 
+
+    error_log /var/log/nginx/error.log crit;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
- 
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
