--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,14 @@ version: '3.6'
 
 services:
   proxy:
-    image: nginx:alpine
+    image: wpapi-proxy
     ports: 
       - 80:80
       - 443:443
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      # - ./ssl:/etc/ssl
       - wordpress:/var/www/html/wpapi
     links: 
       - wordpress
