--- a/nginx/conf.d/wpapi.local.conf
+++ b/nginx/conf.d/wpapi.local.conf
@@ -10,8 +10,8 @@ server {
 
     server_name wpapi.local;
 
-    # ssl_certificate /etc/ssl/certs/localhost.crt;
-    # ssl_certificate_key /etc/ssl/private/localhost.key;
+    # ssl_certificate /etc/ssl/certs/wpapi.local.crt;
+    # ssl_certificate_key /etc/ssl/private/wpapi.local.key;
 
     # ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
