--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,9 @@ services:
     volumes: 
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
-      # - ./ssl:/etc/ssl
-      - wordpress:/var/www/html/wpapi
+      - ./ssl/localhost.crt:/etc/ssl/certs/localhost.crt
+      - ./ssl/localhost.key:/etc/ssl/private/localhost.key
+      - wordpress:/var/www/html
     links: 
       - wordpress
     networks: 
@@ -25,7 +26,7 @@ services:
       WORDPRESS_DB_PASSWORD: wppassword
       WORDPRESS_DB_NAME: shopdb
     volumes:
-      - wordpress:/var/www/html/wpapi
+      - wordpress:/var/www/html
     networks: 
       wpapi_network:
         ipv4_address: 10.0.0.3
