--- a/nginx/conf.d/wpapi.local.conf
+++ b/nginx/conf.d/wpapi.local.conf
@@ -1,21 +1,21 @@
-upstream wpapi.local {
+upstream localhost {
     server 10.0.0.2;
 }
 
 server {
     listen 80;
     listen [::]:80;
-    # listen 443 ssl http2;
-    # listen [::]:443 ssl http2;
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
-    server_name wpapi.local;
+    server_name localhost;
 
-    # ssl_certificate /etc/ssl/certs/wpapi.local.crt;
-    # ssl_certificate_key /etc/ssl/private/wpapi.local.key;
+    ssl_certificate /etc/ssl/certs/localhost.crt;
+    ssl_certificate_key /etc/ssl/private/localhost.key;
 
-    # ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
+    ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
 
-    root /var/www/html/wpapi;
+    root /var/www/html;
     index index.php;
 
     error_log /var/log/nginx/error.log crit;
