--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,6 +24,9 @@ events {
 }
 
 http {
+    include mime.types;
+    default_type application/octet-stream;
+
     # cache informations about FDs, frequently accessed files
     # can boost performance, but you need to test those values
     open_file_cache max=200000 inactive=20s;
