--- a/nginx/conf.d/wpapi.local.conf
+++ b/nginx/conf.d/wpapi.local.conf
@@ -20,6 +20,8 @@ server {
 
     error_log /var/log/nginx/error.log crit;
 
+    client_max_body_size 200M;
+
     location / {
         try_files $uri $uri/ /index.php?$args;
     }
